<resources>
    <string name="app_name">Lithium Parenting App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="FlipCoin">FlipCoin</string>
    <string name="Timeout_Timer">Timeout Timer</string>
    <string name="Configure">Configure</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btnAdd">add</string>
    <string name="child_name_placeholder">Name</string>
    <string name="delete_child">Delete Child</string>
    <string name="name">Name</string>
    <string name="apply_change">Save Changes</string>
    <string name="select_name_to_make_changes">Select name to make changes.</string>
    <string name="use_the_below_to_add_a_child">Use the \'+\' below to add a child, or select a child to edit or delete it.</string>
    <string name="child_config_item_name_placeholder">Child Name</string>
    <string name="congigure_child">Configure Children</string>

    <string name="start_button_text">START</string>
    <string name="resume_button_text">RESUME</string>
    <string name="timer_ab_title">Timeout Timer</string>
    <string name="edittext_warning_empty">Field cannot be empty!</string>
    <string name="edittext_warning_positive_num">Please enter a number that is greater than 0!</string>
    <string name="notification_content">Timer is up!</string>
    <string name="notification_title">Cool Down Timer</string>
    <string name="enter_a_new_name">Enter a new name</string>
    <string name="cool_down_timer_done">Your cool down timer is up!</string>
    <string name="child_list">Child List</string>
    <string name="coin_flip_title">Coin Flip</string>
    <string name="x_gets_to_pick">\ gets to pick!</string>
    <string name="heads_or_tails">Heads or Tails?</string>
    <string name="x_won">\ won!</string>
    <string name="x_lost">\ lost!</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="coin_flip_record_title">History of Coin Flips</string>
    <string name="x_picked_heads">\ picked: Heads.</string>
    <string name="x_picked_tails">\ picked: Tails.</string>
    <string name="result_heads">Result was: Heads.</string>
    <string name="result_tails">Result was: Tails.</string>
    <string name="date_time">Date and time:\  </string>
    <string name="add_child_title">Add Child</string>
    <string name="warning_name_empty">Name Empty!</string>
    <string name="x_added">\ added!</string>
    <string name="edit_child_title">Edit Child</string>
    <string name="x_deleted">\ deleted</string>
    <string name="edited">Edited!</string>
    <string name="enter_child_name">Enter Child\'s Name</string>
    <string name="flip">Flip</string>
    <string name="flip_again">Flip again</string>
    <string name="flip_history">Flip History</string>
    <string name="clear_flip_history">Clear Flip History</string>
    <string name="minutes">Minutes</string>
    <string name="time_zero">00:00</string>
    <string name="start">Start</string>
    <string name="pause">PAUSE</string>
    <string name="reset">Reset</string>
    <string name="button_set">SET</string>
    <string name="_1_min">1 min</string>
    <string name="_2_min">2 min</string>
    <string name="_3_min">3 min</string>
    <string name="_10_min">10 min</string>
    <string name="_5_min">5 min</string>
    <string name="flip_a_coin">Flip a Coin</string>
    <string name="player_1_won">Player 1 Won!</string>
    <string name="clear_history">clear history</string>
    <string name="who_s_turn">Who\'s Turn</string>
    <string name="whos_turn_title">Who\'s Turn</string>
    <string name="task_name_empty_warning">Task name cannot be empty!</string>
    <string name="added_task">Added Task!</string>
    <string name="task">Task:</string>
    <string name="child_to_do_the_task">Child To Do the Task:</string>
    <string name="there_are_currently_no_tasks">There are currently no tasks...</string>
    <string name="tap_this_button_to_add_new_task">Tap this button to add new task</string>
    <string name="please_enter_the_name_of_the_task">Please enter the name of the task</string>
    <string name="task_hint">Task</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="back">Back</string>
    <string name="assign_next_child">Assign Next Child</string>
    <string name="set">SET</string>
    <string name="delete_task">Delete Task</string>
    <string name="queue_order_title">Coin Flip Queue</string>
    <string name="enable_permissions_prompt">Please enable your camera and gallery permission</string>
    <string name="enable_permission_prompt_2">Please enable your gallery permission</string>
    <string name="no_children_configured">No Children Configured</string>
    <string name="select">Select\ </string>
    <string name="to_flip_next">\ to flip next?</string>
    <string name="position_in_queue">"Position in queue:\ "</string>
    <string name="tap_on_the_picture_to_add_a_new_image">Tap on the picture to add a new image</string>
    <string name="select_child">select child</string>
    <string name="current_queue">Current Queue</string>
    <string name="select_a_child_to_pick_the_next_flip">Select a child to pick the next flip</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="empty_flip">empty flip</string>
    <string name="select_nobody">select nobody</string>
    <string name="select_a_child">Select Child</string>
    <string name="help_button">Help</string>
    <string name="team_name">Team Name: Lithium</string>
    <string name="developers">Developed By: Hitesh Juneja, Jan Mazurek, Chenxu Jia, and Janit Kumar</string>
    <string name="help_copyright">Copyright/References</string>
    <string name="references">○ Main Menu Background:\n <a href="https://www.vhv.rs/viewpic/hJoohwo_family-planning-background-design-hd-png-download/">https://www.vhv.rs/viewpic/hJoohwo_family-planning-background-design-hd-png-download/</a>\n○ Default Child Photo:\n <a href="https://www.pngwing.com/en/free-png-zlrfk/download">https://www.pngwing.com/en/free-png-zlrfk/download</a>\n○ Rocket Task Image:\n <a href="https://www.pinterest.ca/pin/571535008960566560/">https://www.pinterest.ca/pin/571535008960566560/</a>\n○ Coin Flip Sound:\n <a href="https://elements.envato.com/coin-throws-5-P6YRTSZ?utm_source=mixkit&amp;;utm_medium=referral&amp;;utm_campaign=elements_mixkit_cs_sfx_tag">https://elements.envato.com/coin-throws-5-P6YRTSZ?utm_source=mixkit&amp;;utm_medium=referral&amp;;utm_campaign=elements_mixkit_cs_sfx_tag</a>\n○ Inhale and Exhale Music:\n <a href="https://pixabay.com/music/search/mood/relaxing/?mood=peaceful">https://pixabay.com/music/search/mood/relaxing/?mood=peaceful</a>\n○ Inhale and Exhale Circle Animation:\n <a href="https://commons.wikimedia.org/wiki/File:Purple_circle_100%25.svg">https://commons.wikimedia.org/wiki/File:Purple_circle_100%25.svg</a>\n○ Alarm PNG:\n <a href="https://www.freeiconspng.com/img/25760">https://www.freeiconspng.com/img/25760</a>\n○ Arrow PNG:\n <a href="https://www.nicepng.com/ourpic/u2q8q8u2u2o0t4e6_curved-arrow-with-broken-line-vector-calligraphy-arrow/">https://www.nicepng.com/ourpic/u2q8q8u2u2o0t4e6_curved-arrow-with-broken-line-vector-calligraphy-arrow/</a></string>
    <string name="help">Help</string>
    <string name="new_photo">New Photo</string>
    <string name="please_choose_from">"Please choose from: "</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="no_children_configured_warning">No children configured, \ncannot assign to next child!</string>
    <string name="only_one_child_warning">Only one children present, \ncannot assign to next child!</string>
    <string name="take_breath">Take Breath</string>
    <string-array name="breath_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="waiting">Waiting</string>
    <string name="exhaling">Exhaling</string>
    <string name="inhaling">Inhaling</string>
    <string name="complete">Complete</string>
    <string name="good_job">Good Job!</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="breath_help">Keep Holding Button and Inhale</string>
    <string name="breathe_in">Breathe In</string>
    <string name="breath_out">Breathe Out</string>
    <string name="release_help">Release Button and Exhale</string>
    <string name="state">Let\'s begin</string>
    <string name="breaths_remaining">Let us take\t</string>
    <string name="breath_together">\tbreath together</string>
    <string name="_2">2</string>
    <string name="begin">Begin</string>
    <string name="breath_setup_directions">Enter Number of Breaths to Take</string>
    <string name="press_and_hold_button">(Press and hold button)</string>
    <string name="breaths_complete">Breaths Complete</string>
    <string name="let_us_take_x">"Let us take "</string>
    <string name="one_breath_together">" breath together"</string>
    <string name="several_breaths_together">" breaths together"</string>
    <string name="task_history">Task History</string>
    <string name="task_completed_on">Task completed on:</string>
    <string name="task_title_pre">"Task History - "</string>
    <string name="speed">speed:</string>

</resources>