<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditTaskActivity">

    <TextView
        android:id="@+id/txtEditTaskInstruction"
        android:layout_width="203dp"
        android:layout_height="25dp"
        android:layout_marginTop="128dp"
        android:text="@string/edit_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEditTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditTaskInstruction" />

    <TextView
        android:id="@+id/txtTaskChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/child_to_do_the_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditTaskName" />

    <TextView
        android:id="@+id/txtCurrentChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/txtTaskChild"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditTaskName" />

    <Button
        android:id="@+id/btnCancelEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNextChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/assign_next_child"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/btnCancelEditTask" />

    <Button
        android:id="@+id/btnSetEdit"
        android:layout_width="67dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextEditTaskName"
        app:layout_constraintTop_toTopOf="@+id/editTextEditTaskName" />

    <Button
        android:id="@+id/btnDeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/delete_task"
        app:layout_constraintBottom_toTopOf="@+id/btnNextChild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgEditTaskChild"
        android:layout_width="56dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCurrentChild"
        app:layout_constraintStart_toEndOf="@+id/txtCurrentChild"
        app:layout_constraintTop_toTopOf="@+id/txtCurrentChild"
        app:layout_constraintVertical_bias="0.542"
        app:srcCompat="@drawable/heads_coloured" />
</androidx.constraintlayout.widget.ConstraintLayout>