<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTimerPage"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:background='@drawable/custom_button'
        android:text="@string/Timeout_Timer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/coinFlipButton"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:background='@drawable/custom_button'
        android:text="@string/flip_a_coin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintTop_toBottomOf="@+id/whosturnBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/whosturnBtn"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginBottom="84dp"
        android:background='@drawable/custom_button'
        android:text="@string/who_s_turn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_content_main" />

    <Button
        android:id="@+id/configButton"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background='@drawable/custom_button'
        android:text="@string/Configure"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTimerPage" />

    <Button
        android:id="@+id/helpbtn"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background='@drawable/custom_button'
        android:text="@string/help_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configButton" />

    <Space
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_content_main"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main" />
</androidx.constraintlayout.widget.ConstraintLayout>
