<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coinflip_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CoinFlipActivity">

    <ImageView
        android:id="@+id/image_coin_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unflipped" />

    <Button
        android:id="@+id/button_heads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heads"
        app:layout_constraintBottom_toBottomOf="@+id/button_flip"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_flip" />

    <Button
        android:id="@+id/button_tails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tails"
        app:layout_constraintBottom_toBottomOf="@+id/button_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toTopOf="@+id/button_flip" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_flip_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/image_coin_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_flip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip"
        app:layout_constraintBottom_toBottomOf="@+id/button_flip_again"
        app:layout_constraintEnd_toEndOf="@+id/button_flip_again"
        app:layout_constraintStart_toStartOf="@+id/button_flip_again"
        app:layout_constraintTop_toTopOf="@+id/button_flip_again" />

    <Button
        android:id="@+id/button_flip_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip_again"
        app:layout_constraintBottom_toTopOf="@+id/button_coinflip_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_result" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_coin_state" />

    <Button
        android:id="@+id/button_coinflip_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/flip_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_child_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/tv_flip_prompt"
        app:layout_constraintEnd_toStartOf="@+id/tv_flip_prompt"
        app:layout_constraintTop_toTopOf="@+id/tv_flip_prompt"
        app:srcCompat="@drawable/blank_coloured" />

    <Button
        android:id="@+id/btn_view_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/view_queue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>